re run benchmark on riboflavin

--- a/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb
+++ b/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,17 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Numba compilation\n",
-    "# _ = path_solver(X, y, Lambda, k_max=0., rtol_pattern=1e-6, atol_pattern = 1e-6, rtol_gamma=1e-6, split_max=1e1, log=0)\n",
-    "# _ = hybrid_cd(X, y, Lambda, fit_intercept=False, tol=1e-1)\n",
-    "# # _ = oracle_cd(X, y, Lambda, fit_intercept=False, tol=1e-1)\n",
-    "# _ = admm(X, y, Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-1)\n",
-    "# # _ = newt_alm(X, y, Lambda, fit_intercept=False, tol=1e-1)\n",
-    "# _ = prox_grad(X, y, Lambda, fit_intercept=False, tol=1e-1)"
+    "# Numba compilation\n",
+    "_ = path_solver(X, y, Lambda, k_max=0., rtol_pattern=1e-6, atol_pattern = 1e-6, rtol_gamma=1e-6, split_max=1e1, log=0)\n",
+    "_ = hybrid_cd(X, y, Lambda, fit_intercept=False, tol=1e-1)\n",
+    "# _ = oracle_cd(X, y, Lambda, fit_intercept=False, tol=1e-1)\n",
+    "_ = admm(X, y, Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-1)\n",
+    "# _ = newt_alm(X, y, Lambda, fit_intercept=False, tol=1e-1)\n",
+    "_ = prox_grad(X, y, Lambda, fit_intercept=False, tol=1e-1)"
    ]
   },
   {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,33 +145,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Benchmark\n",
-    "nb_loops = 100; nb_runs = 7 \n",
+    "nb_loops = 100; nb_runs = 7\n",
     "\n",
-    "# for ratio in [0.5, 0.1, 0.02]:\n",
-    "gamma = ratio*dual_norm(X.T@y, Lambda)\n",
-    "# time_fista =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12/X.shape[0], max_epochs=100_000)',\n",
-    "#                     repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "# time_pgd =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12/X.shape[0], max_epochs=20_000)',\n",
-    "#                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "# time_admm =np.mean(repeat('admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12/X.shape[0], max_epochs=100_000)',\n",
-    "#                     repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "time_cd =np.mean(repeat('hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12/X.shape[0])',\n",
-    "                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "time_path =np.mean(repeat('path_solver(X, y, gamma*Lambda, k_max=1e3, rtol_pattern=1e-10, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=0)',\n",
-    "                    repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
-    "benchmark[f'{ratio}'] = [time_cd, time_path]\n"
+    "for ratio in [0.5, 0.1]:\n",
+    "    gamma = ratio*dual_norm(X.T@y, Lambda)\n",
+    "    # time_fista =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, fista=True, tol=1e-12/X.shape[0], max_epochs=100_000)',\n",
+    "    #                     repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "    # time_pgd =np.mean(repeat('prox_grad(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, anderson=True, tol=1e-12/X.shape[0], max_epochs=20_000)',\n",
+    "    #                   repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "    # time_admm =np.mean(repeat('admm(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, rho=100, adaptive_rho=False, tol=1e-12/X.shape[0], max_epochs=100_000)',\n",
+    "    #                     repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "    time_cd =np.mean(repeat('hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, tol=1e-12/X.shape[0])',\n",
+    "                        repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "    time_path =np.mean(repeat('path_solver(X, y, gamma*Lambda, k_max=1e3, rtol_pattern=1e-10, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=0)',\n",
+    "                        repeat=nb_runs, number=nb_loops, globals=globals()))/nb_loops\n",
+    "    benchmark[f'{ratio}'] = [time_cd, time_path]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/xdupuis/Research/slope-path/github/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb Cell 9\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/xdupuis/Research/slope-path/github/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mwith\u001b[39;00m pd\u001b[39m.\u001b[39moption_context(\u001b[39m'\u001b[39m\u001b[39mdisplay.float_format\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m{:,.2e}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/xdupuis/Research/slope-path/github/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     display(benchmark)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "with pd.option_context('display.float_format', '{:,.2e}'.format):\n",
     "    display(benchmark)"
