--- a/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb
+++ b/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,19 +169,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/xdupuis/Research/slope-path/github/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb Cell 9\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/xdupuis/Research/slope-path/github/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mwith\u001b[39;00m pd\u001b[39m.\u001b[39moption_context(\u001b[39m'\u001b[39m\u001b[39mdisplay.float_format\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m{:,.2e}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/xdupuis/Research/slope-path/github/experiments/solvers_benchmarks/riboflavin_benchmark.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     display(benchmark)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>gamma / gamma_max</th>\n",
+       "      <th>0.5</th>\n",
+       "      <th>0.1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>hybrid CD</th>\n",
+       "      <td>4.67e-02</td>\n",
+       "      <td>4.52e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>path (our)</th>\n",
+       "      <td>4.20e-02</td>\n",
+       "      <td>2.21e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "gamma / gamma_max      0.5      0.1\n",
+       "hybrid CD         4.67e-02 4.52e-01\n",
+       "path (our)        4.20e-02 2.21e+00"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -191,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
