--- a/experiments/full_paths/wine-quality.ipynb
+++ b/experiments/full_paths/wine-quality.ipynb
@@ -87,56 +87,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node 0: gamma = 898.291, elapsed time = 1.63e-04s, gap = 0.00e+00\n",
-      "node 1: gamma = 850.633, elapsed time = 4.86e-03s, gap = 4.55e-13\n",
-      "node 2: gamma = 834.176, elapsed time = 6.71e-03s, gap = 4.55e-13\n",
-      "node 3: gamma = 518.014, elapsed time = 7.16e-03s, gap = 3.98e-13\n",
-      "node 4: gamma = 503.663, elapsed time = 7.53e-03s, gap = 3.98e-13\n",
-      "node 5: gamma = 490.715, elapsed time = 7.89e-03s, gap = 5.12e-13\n",
-      "node 6: gamma = 393.072, elapsed time = 8.18e-03s, gap = 6.25e-13\n",
-      "node 7: gamma = 342.330, elapsed time = 8.80e-03s, gap = 7.39e-13\n",
-      "node 8: gamma = 331.802, elapsed time = 9.15e-03s, gap = 8.53e-13\n",
-      "node 9: gamma = 321.273, elapsed time = 9.48e-03s, gap = 7.96e-13\n",
-      "node 10: gamma = 269.699, elapsed time = 9.94e-03s, gap = 1.71e-13\n",
-      "node 11: gamma = 253.852, elapsed time = 1.03e-02s, gap = 8.53e-13\n",
-      "node 12: gamma = 241.336, elapsed time = 1.08e-02s, gap = 1.14e-13\n",
-      "node 13: gamma = 193.852, elapsed time = 1.12e-02s, gap = 2.27e-13\n",
-      "node 14: gamma = 184.583, elapsed time = 1.17e-02s, gap = 2.27e-13\n",
-      "node 15: gamma = 164.497, elapsed time = 1.21e-02s, gap = 2.27e-13\n",
-      "node 16: gamma = 144.624, elapsed time = 1.26e-02s, gap = 3.98e-13\n",
-      "node 17: gamma = 143.223, elapsed time = 1.31e-02s, gap = 5.68e-13\n",
-      "node 18: gamma = 137.079, elapsed time = 1.35e-02s, gap = 4.55e-13\n",
-      "node 19: gamma = 136.620, elapsed time = 1.40e-02s, gap = 4.55e-13\n",
-      "node 20: gamma = 132.797, elapsed time = 1.44e-02s, gap = 3.41e-13\n",
-      "node 21: gamma = 131.668, elapsed time = 1.49e-02s, gap = 6.25e-13\n",
-      "node 22: gamma = 126.725, elapsed time = 1.54e-02s, gap = 4.55e-13\n",
-      "node 23: gamma = 121.627, elapsed time = 1.58e-02s, gap = 5.68e-13\n",
-      "node 24: gamma = 119.728, elapsed time = 1.62e-02s, gap = 5.68e-13\n",
-      "node 25: gamma = 109.581, elapsed time = 1.68e-02s, gap = 2.84e-13\n",
-      "node 26: gamma = 107.880, elapsed time = 1.73e-02s, gap = 3.41e-13\n",
-      "node 27: gamma = 87.120, elapsed time = 1.77e-02s, gap = 6.25e-13\n",
-      "node 28: gamma = 84.077, elapsed time = 1.80e-02s, gap = 5.68e-13\n",
-      "node 29: gamma = 72.251, elapsed time = 1.84e-02s, gap = 5.12e-13\n",
-      "node 30: gamma = 62.681, elapsed time = 1.88e-02s, gap = 6.25e-13\n",
-      "node 31: gamma = 55.356, elapsed time = 1.91e-02s, gap = 4.55e-13\n",
-      "node 32: gamma = 55.152, elapsed time = 1.95e-02s, gap = 5.68e-13\n",
-      "node 33: gamma = 54.888, elapsed time = 1.99e-02s, gap = 3.98e-13\n",
-      "node 34: gamma = 50.924, elapsed time = 2.03e-02s, gap = 3.98e-13\n",
-      "node 35: gamma = 50.688, elapsed time = 2.07e-02s, gap = 4.55e-13\n",
-      "node 36: gamma = 39.172, elapsed time = 2.11e-02s, gap = 6.82e-13\n",
-      "node 37: gamma = 22.413, elapsed time = 2.16e-02s, gap = 3.41e-13\n",
-      "node 38: gamma = 19.965, elapsed time = 2.20e-02s, gap = 6.25e-13\n",
-      "node 39: gamma = 18.629, elapsed time = 2.25e-02s, gap = 6.25e-13\n",
-      "node 40: gamma = 16.974, elapsed time = 2.29e-02s, gap = 5.12e-13\n",
-      "node 41: gamma = 11.477, elapsed time = 2.33e-02s, gap = 3.41e-13\n",
-      "node 42: gamma = 11.243, elapsed time = 2.37e-02s, gap = 4.55e-13\n",
-      "node 43: gamma = 9.739, elapsed time = 2.40e-02s, gap = 6.82e-13\n",
-      "node 44: gamma = 9.268, elapsed time = 2.43e-02s, gap = 4.55e-13\n",
-      "node 45: gamma = 2.773, elapsed time = 2.47e-02s, gap = 7.96e-13\n",
-      "node 46: gamma = 2.479, elapsed time = 2.50e-02s, gap = 5.12e-13\n",
-      "node 47: gamma = 0.943, elapsed time = 2.54e-02s, gap = 5.68e-13\n",
-      "node 48: gamma = 0.916, elapsed time = 2.58e-02s, gap = 5.68e-13\n",
-      "node 49: gamma = 0.000, elapsed time = 2.61e-02s, gap = 2.84e-13\n"
+      "node 0: gamma = 898.291, elapsed time = 7.34e-05s, gap = 0.00e+00\n",
+      "node 1: gamma = 850.633, elapsed time = 2.81e-03s, gap = 4.55e-13\n",
+      "node 2: gamma = 834.176, elapsed time = 3.88e-03s, gap = 4.55e-13\n",
+      "node 3: gamma = 518.014, elapsed time = 4.14e-03s, gap = 3.98e-13\n",
+      "node 4: gamma = 503.663, elapsed time = 4.37e-03s, gap = 3.98e-13\n",
+      "node 5: gamma = 490.715, elapsed time = 4.65e-03s, gap = 5.12e-13\n",
+      "node 6: gamma = 393.072, elapsed time = 4.85e-03s, gap = 6.25e-13\n",
+      "node 7: gamma = 342.330, elapsed time = 5.11e-03s, gap = 7.39e-13\n",
+      "node 8: gamma = 331.802, elapsed time = 5.30e-03s, gap = 8.53e-13\n",
+      "node 9: gamma = 321.273, elapsed time = 5.52e-03s, gap = 7.96e-13\n",
+      "node 10: gamma = 269.699, elapsed time = 6.10e-03s, gap = 1.71e-13\n",
+      "node 11: gamma = 253.852, elapsed time = 6.38e-03s, gap = 8.53e-13\n",
+      "node 12: gamma = 241.336, elapsed time = 6.69e-03s, gap = 1.14e-13\n",
+      "node 13: gamma = 193.852, elapsed time = 7.02e-03s, gap = 2.27e-13\n",
+      "node 14: gamma = 184.583, elapsed time = 7.35e-03s, gap = 2.27e-13\n",
+      "node 15: gamma = 164.497, elapsed time = 7.62e-03s, gap = 2.27e-13\n",
+      "node 16: gamma = 144.624, elapsed time = 7.94e-03s, gap = 3.98e-13\n",
+      "node 17: gamma = 143.223, elapsed time = 8.29e-03s, gap = 5.68e-13\n",
+      "node 18: gamma = 137.079, elapsed time = 8.64e-03s, gap = 4.55e-13\n",
+      "node 19: gamma = 136.620, elapsed time = 9.09e-03s, gap = 4.55e-13\n",
+      "node 20: gamma = 132.797, elapsed time = 9.39e-03s, gap = 3.41e-13\n",
+      "node 21: gamma = 131.668, elapsed time = 9.83e-03s, gap = 6.25e-13\n",
+      "node 22: gamma = 126.725, elapsed time = 1.02e-02s, gap = 4.55e-13\n",
+      "node 23: gamma = 121.627, elapsed time = 1.06e-02s, gap = 5.68e-13\n",
+      "node 24: gamma = 119.728, elapsed time = 1.10e-02s, gap = 5.68e-13\n",
+      "node 25: gamma = 109.581, elapsed time = 1.14e-02s, gap = 2.84e-13\n",
+      "node 26: gamma = 107.880, elapsed time = 1.18e-02s, gap = 3.41e-13\n",
+      "node 27: gamma = 87.120, elapsed time = 1.21e-02s, gap = 6.25e-13\n",
+      "node 28: gamma = 84.077, elapsed time = 1.25e-02s, gap = 5.68e-13\n",
+      "node 29: gamma = 72.251, elapsed time = 1.29e-02s, gap = 5.12e-13\n",
+      "node 30: gamma = 62.681, elapsed time = 1.33e-02s, gap = 6.25e-13\n",
+      "node 31: gamma = 55.356, elapsed time = 1.37e-02s, gap = 4.55e-13\n",
+      "node 32: gamma = 55.152, elapsed time = 1.41e-02s, gap = 5.68e-13\n",
+      "node 33: gamma = 54.888, elapsed time = 1.45e-02s, gap = 3.98e-13\n",
+      "node 34: gamma = 50.924, elapsed time = 1.48e-02s, gap = 3.98e-13\n",
+      "node 35: gamma = 50.688, elapsed time = 1.52e-02s, gap = 4.55e-13\n",
+      "node 36: gamma = 39.172, elapsed time = 1.56e-02s, gap = 6.82e-13\n",
+      "node 37: gamma = 22.413, elapsed time = 1.59e-02s, gap = 3.41e-13\n",
+      "node 38: gamma = 19.965, elapsed time = 1.66e-02s, gap = 6.25e-13\n",
+      "node 39: gamma = 18.629, elapsed time = 1.68e-02s, gap = 6.25e-13\n",
+      "node 40: gamma = 16.974, elapsed time = 1.71e-02s, gap = 5.12e-13\n",
+      "node 41: gamma = 11.477, elapsed time = 1.74e-02s, gap = 3.41e-13\n",
+      "node 42: gamma = 11.243, elapsed time = 1.76e-02s, gap = 4.55e-13\n",
+      "node 43: gamma = 9.739, elapsed time = 1.80e-02s, gap = 6.82e-13\n",
+      "node 44: gamma = 9.268, elapsed time = 1.83e-02s, gap = 4.55e-13\n",
+      "node 45: gamma = 2.773, elapsed time = 1.86e-02s, gap = 7.96e-13\n",
+      "node 46: gamma = 2.479, elapsed time = 1.90e-02s, gap = 5.12e-13\n",
+      "node 47: gamma = 0.943, elapsed time = 1.93e-02s, gap = 5.68e-13\n",
+      "node 48: gamma = 0.916, elapsed time = 1.96e-02s, gap = 5.68e-13\n",
+      "node 49: gamma = 0.000, elapsed time = 1.99e-02s, gap = 2.84e-13\n"
      ]
     }
    ],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
      "output_type": "stream",
      "text": [
       "pattern for 0.5 x gamma_max: [ 1 -4  3  0 -2  0 -3 -3  0  4  4]\n",
-      "elapsed time = 1.98e-03s, crossed nodes = 6, primal-dual gap = 8.53e-13\n"
+      "elapsed time = 1.88e-03s, crossed nodes = 6, primal-dual gap = 8.53e-13\n"
      ]
     }
    ],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -263,27 +263,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node 0: gamma = 614.683, elapsed time = 1.08e-04s\n",
-      "node 1: gamma = 476.147, elapsed time = 4.38e-03s\n",
-      "node 2: gamma = 242.719, elapsed time = 6.06e-03s\n",
-      "node 3: gamma = 136.465, elapsed time = 6.31e-03s\n",
-      "node 4: gamma = 91.902, elapsed time = 6.53e-03s\n",
-      "node 5: gamma = 85.998, elapsed time = 6.79e-03s\n",
-      "node 6: gamma = 74.879, elapsed time = 7.13e-03s\n",
-      "node 7: gamma = 30.414, elapsed time = 7.47e-03s\n",
-      "node 8: gamma = 26.418, elapsed time = 7.86e-03s\n",
-      "node 9: gamma = 16.538, elapsed time = 8.23e-03s\n",
-      "node 10: gamma = 11.760, elapsed time = 8.58e-03s\n",
-      "node 11: gamma = 9.430, elapsed time = 8.98e-03s\n",
-      "node 12: gamma = 7.428, elapsed time = 9.42e-03s\n",
-      "node 13: gamma = 0.000, elapsed time = 9.82e-03s\n"
+      "node 0: gamma = 614.683, elapsed time = 1.19e-04s\n",
+      "node 1: gamma = 476.147, elapsed time = 3.14e-03s\n",
+      "node 2: gamma = 242.719, elapsed time = 4.47e-03s\n",
+      "node 3: gamma = 136.465, elapsed time = 4.69e-03s\n",
+      "node 4: gamma = 91.902, elapsed time = 4.87e-03s\n",
+      "node 5: gamma = 85.998, elapsed time = 5.12e-03s\n",
+      "node 6: gamma = 74.879, elapsed time = 5.62e-03s\n",
+      "node 7: gamma = 30.414, elapsed time = 5.98e-03s\n",
+      "node 8: gamma = 26.418, elapsed time = 6.43e-03s\n",
+      "node 9: gamma = 16.538, elapsed time = 6.79e-03s\n",
+      "node 10: gamma = 11.760, elapsed time = 1.21e-02s\n",
+      "node 11: gamma = 9.430, elapsed time = 1.73e-02s\n",
+      "node 12: gamma = 7.428, elapsed time = 2.76e-02s\n",
+      "node 13: gamma = 0.000, elapsed time = 3.25e-02s\n"
      ]
     }
    ],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -367,6 +367,115 @@
     "Sol[i0][np.abs(Sol[i0])<1e-10] = 0     \n",
     "print(f'solution in gamma: {Sol[i0]}')  \n",
     "print(f'solution sign in gamma: {np.sign(Sol[i0])}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparison between SLOPE and LASSO on simulated data\n",
+    "\n",
+    "We simulate $y = X \\hat \\beta^{\\text{ols}} + w$ with $w \\sim \\mathcal N(0,\\sigma^2 Id_n)$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prediction error for SLOPE: 4.776\n",
+      "prediction error for LASSO: 4.927\n",
+      "prediction error for OLS: 4.710\n"
+     ]
+    }
+   ],
+   "source": [
+    "sigma2 = np.linalg.norm(y-X@ols,ord=2)**2/(X.shape[0]-X.shape[1])\n",
+    "\n",
+    "n_samples = 1000\n",
+    "sure_slope = []; err_slope = []; sure_lasso = []; err_lasso = []; err_ols = []\n",
+    "\n",
+    "rng = np.random.default_rng(0)\n",
+    "for i in range(n_samples):\n",
+    "    # white noise\n",
+    "    w = rng.normal(0, np.sqrt(sigma2), X.shape[0])\n",
+    "    # SLOPE\n",
+    "    Gamma, Sol, Primal, Gap, M, Split, T = full_path(X, X@ols+w , Lambda, ratio=1., k_max=1e4, rtol_pattern=1e-10, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=0)\n",
+    "    Critical, SURE, Sol = min_SURE(X, X@ols+w, Lambda, Gamma, M, sigma2, tol=1e-10)\n",
+    "    i0 = np.argmin(SURE)\n",
+    "    sure_slope.append(SURE[i0])\n",
+    "    err_slope.append(np.linalg.norm(X@Sol[i0]-X@ols,ord=2)**2)\n",
+    "    # LASSO\n",
+    "    Gamma, Sol, S, Split, T = full_path_LASSO(X, X@ols+w, ratio=1., k_max=1e4, rtol_sign=1e-10, atol_sign = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=0)\n",
+    "    Critical, SURE, Sol = min_SURE_LASSO(X, X@ols+w, Gamma, S, sigma2, tol=1e-10)\n",
+    "    i0 = np.argmin(SURE)\n",
+    "    sure_lasso.append(SURE[i0])\n",
+    "    err_lasso.append(np.linalg.norm(X@Sol[i0]-X@ols,ord=2)**2)\n",
+    "    # OLS\n",
+    "    sol = np.linalg.solve(X.T@X, X.T@(X@ols+w))\n",
+    "    err_ols.append(np.linalg.norm(X@sol-X@ols,ord=2)**2)\n",
+    "\n",
+    "print(f'prediction error for SLOPE: {np.mean(err_slope):.3f}')\n",
+    "print(f'prediction error for LASSO: {np.mean(err_lasso):.3f}')\n",
+    "print(f'prediction error for OLS: {np.mean(err_ols):.3f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SURE as an unbiased estimator of the prediction error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from modules.sure import SURE_SLOPE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average SURE for SLOPE: 120.379\n",
+      "prediction error for SLOPE: 120.249\n"
+     ]
+    }
+   ],
+   "source": [
+    "gamma = 0.5*dual_norm(X.T@(X@ols), Lambda)\n",
+    "sigma2 = np.linalg.norm(y-X@ols,ord=2)**2/(X.shape[0]-X.shape[1])\n",
+    "\n",
+    "n_samples = 1000\n",
+    "sure_slope = []; err_slope = []\n",
+    "\n",
+    "rng = np.random.default_rng(0)\n",
+    "for i in range(n_samples):\n",
+    "    w = rng.normal(0, np.sqrt(sigma2), X.shape[0])\n",
+    "    sol, *_ = path_solver(X, X@ols+w , gamma*Lambda, k_max=1e3, rtol_pattern=1e-10, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=0)\n",
+    "    sure_slope.append(SURE_SLOPE(X, X@ols+w, sol, sigma2, tol=1e-10))\n",
+    "    err_slope.append(np.linalg.norm(X@sol - X@ols, ord=2)**2)\n",
+    "print(f'average SURE for SLOPE: {np.mean(sure_slope):.3f}')\n",
+    "print(f'prediction error for SLOPE: {np.mean(err_slope):.3f}')"
    ]
   },
   {
