try something on main branch

--- a/experiments/full_paths/artificial-data.ipynb
+++ b/experiments/full_paths/artificial-data.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiments on artificial data"
+    "# Experiments on artificial data\n",
+    "\n",
+    "to be moved to explo branch"
    ]
   },
   {
